# uchida-lab-to-nwb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conversion_notes.md  inspect_data.py  make_env.yml  project_track.md  pyproject.toml
.github/workflows/: auto-publish.yml  test-install.yml
notebooks/: README.md  environment.yml  phillips_2025_demo.ipynb
src/uchida_lab_to_nwb/phillips_2025/: __init__.py  phillips_2025_convert_all_sessions.py  phillips_2025_convert_session.py  phillips_2025_nwbconverter.py
src/uchida_lab_to_nwb/phillips_2025/_metadata/: fiber_photometry.yaml  phillips_2025_metadata.yaml  subject_metadata.yaml
src/uchida_lab_to_nwb/phillips_2025/interfaces/: __init__.py  doric_fiber_photometry_interface.py  doric_processed_photometry_interface.py  pcampi_sync_interface.py  sdannce_interface.py
