[project]
name = "uchida-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for the Uchida Lab."
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "nwbinspector",
]

[project.urls]
Repository = "https://github.com/catalystneuro/uchida-lab-to-nwb"

[project.optional-dependencies]
phillips_2025 = [
    # DANNCEInterface is on a branch pending merge to main; pin until released on PyPI
    "neuroconv @ git+https://github.com/catalystneuro/neuroconv.git@add-dannce-interface",
    "h5py",
    "scipy",
    "numpy",
    "ndx-fiber-photometry",
    "ndx-ophys-devices>=0.3.1",
    "ndx-pose",
    "opencv-python-headless",
    "openpyxl",
    "tqdm",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "*.yaml",
    "*.yml",
    "*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uchida_lab_to_nwb"]

[tool.hatch.build.targets.sdist]
packages = ["src/uchida_lab_to_nwb"]

[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",
    "I",
    "UP006",
    "UP007",
    "UP045",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["uchida_lab_to_nwb"]

[tool.codespell]
skip = '.git*,*.pdf,*.css'
check-hidden = true
ignore-words-list = 'assertin'
